rstsr-kml-ffi/header/kblas.h

typedef BLASLONG BLASINT;
typedef int BLASINT;
/* matrix saved in rows or cols */
typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
/* matrix transpose or conjugate transpose */
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113, // conjugate transpose
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
/* matrix upper or lower */
typedef enum CBLAS_UPLO {
    CblasUpper = 121,
    CblasLower = 122
} CBLAS_UPLO;
/* matrix diagonal is unit or no unit */
typedef enum CBLAS_DIAG {
    CblasNonUnit = 131,
    CblasUnit = 132
} CBLAS_DIAG;
void cblas_dimatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_cimatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float *alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_zimatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double *alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_somatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float alpha, float *a, const BLASINT lda,
    float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_domatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double alpha, double *a,
    const BLASINT lda, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_comatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float *alpha, float *a,
    const BLASINT lda, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_chomatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const __fp16 *alpha, __fp16 *a,
    const BLASINT lda, __fp16 *b, const BLASINT ldb, __fp16 *c, const BLASINT ldc);
void cblas_zomatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double *alpha, double *a,
    const BLASINT lda, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_simatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_dimatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_cimatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float *alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_zimatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double *alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_somatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float alpha, float *a, const BLASINT lda,
    float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_domatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double alpha, double *a,
    const BLASINT lda, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_comatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float *alpha, float *a,
    const BLASINT lda, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_zomatdiv(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double *alpha, double *a,
    const BLASINT lda, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_scopy(const BLASINT n, const float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_dcopy(const BLASINT n, const double *x, const BLASINT incX, double *y, const BLASINT incY);
void cblas_ccopy(const BLASINT n, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zcopy(const BLASINT n, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_sswap(const BLASINT n, float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_dswap(const BLASINT n, double *x, const BLASINT incX, double *y, const BLASINT incY);
void cblas_cswap(const BLASINT n, void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zswap(const BLASINT n, void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_srotg(float *a, float *b, float *c, float *s);
void cblas_drotg(double *a, double *b, double *c, double *s);
void cblas_srot(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float c,
    const float s);
void cblas_drot(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double c,
    const double s);
void cblas_csrot(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float c,
    const float s);
void cblas_zdrot(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double c,
    const double s);
void cblas_srotmg(float *d1, float *d2, float *b1, const float b2, float *P);
void cblas_drotmg(double *d1, double *d2, double *b1, const double b2, double *P);
void cblas_srotm(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float *P);
void cblas_drotm(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double *P);
void cblas_sscal(const BLASINT N, const float alpha, float *X, const BLASINT incX);
void cblas_dscal(const BLASINT N, const double alpha, double *X, const BLASINT incX);
void cblas_cscal(const BLASINT N, const void *alpha, void *X, const BLASINT incX);
void cblas_zscal(const BLASINT N, const void *alpha, void *X, const BLASINT incX);
void cblas_csscal(const BLASINT N, const float alpha, void *X, const BLASINT incX);
void cblas_zdscal(const BLASINT N, const double alpha, void *X, const BLASINT incX);
void cblas_sgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const float alpha, const float *a, const BLASINT lda, const float *x, const BLASINT incX, const float beta,
    float *y, const BLASINT incY);
void cblas_dgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const double alpha, const double *a, const BLASINT lda, const double *x, const BLASINT incX, const double beta,
    double *y, const BLASINT incY);
void cblas_cgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const void *alpha, const void *a, const BLASINT lda, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);
void cblas_zgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const void *alpha, const void *a, const BLASINT lda, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);
void cblas_sger(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const float alpha, const float *X,
    const BLASINT incX, const float *Y, const BLASINT incY, float *A, const BLASINT lda);
void cblas_dger(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const double alpha, const double *X,
    const BLASINT incX, const double *Y, const BLASINT incY, double *A, const BLASINT lda);
void cblas_cgeru(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);
void cblas_cgerc(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);
void cblas_zgeru(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);
void cblas_zgerc(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);
void cblas_strsv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const float *A, const BLASINT lda, float *X, const BLASINT incX);
void cblas_dtrsv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const double *A, const BLASINT lda, double *X, const BLASINT incX);
void cblas_ctrsv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const void *A, const BLASINT lda, void *X, const BLASINT incX);
void cblas_ztrsv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const void *A, const BLASINT lda, void *X, const BLASINT incX);
void cblas_strmv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const float *A, const BLASINT lda, float *X, const BLASINT incX);
void cblas_dtrmv(const enum CBLAS_ORDER order, const enum CBLAS_UPLO Uplo, const enum CBLAS_TRANSPOSE TransA,
    const enum CBLAS_DIAG Diag, const BLASINT N, const double *A, const BLASINT lda, double *X, const BLASINT incX);