rstsr-kml-ffi/src/kblas/ffi_extern.rs

    pub fn cblas_dimatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_cimatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_zimatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_somatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_domatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_comatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_chomatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f16,
        a: *mut f16,
        lda: blas_int,
        b: *mut f16,
        ldb: blas_int,
        c: *mut f16,
        ldc: blas_int,
    );
    pub fn cblas_zomatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_simatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_dimatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_cimatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_zimatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_somatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_domatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_comatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_zomatdiv(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_scopy(n: blas_int, x: *const f32, incX: blas_int, y: *mut f32, incY: blas_int);
    pub fn cblas_dcopy(n: blas_int, x: *const f64, incX: blas_int, y: *mut f64, incY: blas_int);
    pub fn cblas_ccopy(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zcopy(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_sswap(n: blas_int, x: *mut f32, incX: blas_int, y: *mut f32, incY: blas_int);
    pub fn cblas_dswap(n: blas_int, x: *mut f64, incX: blas_int, y: *mut f64, incY: blas_int);
    pub fn cblas_cswap(n: blas_int, x: *mut c_void, incX: blas_int, y: *mut c_void, incY: blas_int);
    pub fn cblas_zswap(n: blas_int, x: *mut c_void, incX: blas_int, y: *mut c_void, incY: blas_int);
    pub fn cblas_srotg(a: *mut f32, b: *mut f32, c: *mut f32, s: *mut f32);
    pub fn cblas_drotg(a: *mut f64, b: *mut f64, c: *mut f64, s: *mut f64);
    pub fn cblas_srot(
        N: blas_int,
        X: *mut f32,
        incX: blas_int,
        Y: *mut f32,
        incY: blas_int,
        c: f32,
        s: f32,
    );
    pub fn cblas_drot(
        N: blas_int,
        X: *mut f64,
        incX: blas_int,
        Y: *mut f64,
        incY: blas_int,
        c: f64,
        s: f64,
    );
    pub fn cblas_csrot(
        N: blas_int,
        X: *mut f32,
        incX: blas_int,
        Y: *mut f32,
        incY: blas_int,
        c: f32,
        s: f32,
    );
    pub fn cblas_zdrot(
        N: blas_int,
        X: *mut f64,
        incX: blas_int,
        Y: *mut f64,
        incY: blas_int,
        c: f64,
        s: f64,
    );
    pub fn cblas_srotmg(d1: *mut f32, d2: *mut f32, b1: *mut f32, b2: f32, P: *mut f32);
    pub fn cblas_drotmg(d1: *mut f64, d2: *mut f64, b1: *mut f64, b2: f64, P: *mut f64);
    pub fn cblas_srotm(
        N: blas_int,
        X: *mut f32,
        incX: blas_int,
        Y: *mut f32,
        incY: blas_int,
        P: *const f32,
    );
    pub fn cblas_drotm(
        N: blas_int,
        X: *mut f64,
        incX: blas_int,
        Y: *mut f64,
        incY: blas_int,
        P: *const f64,
    );
    pub fn cblas_sscal(N: blas_int, alpha: f32, X: *mut f32, incX: blas_int);
    pub fn cblas_dscal(N: blas_int, alpha: f64, X: *mut f64, incX: blas_int);
    pub fn cblas_cscal(N: blas_int, alpha: *const c_void, X: *mut c_void, incX: blas_int);
    pub fn cblas_zscal(N: blas_int, alpha: *const c_void, X: *mut c_void, incX: blas_int);
    pub fn cblas_csscal(N: blas_int, alpha: f32, X: *mut c_void, incX: blas_int);
    pub fn cblas_zdscal(N: blas_int, alpha: f64, X: *mut c_void, incX: blas_int);
    pub fn cblas_sgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *const f32,
        lda: blas_int,
        x: *const f32,
        incX: blas_int,
        beta: f32,
        y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_dgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *const f64,
        lda: blas_int,
        x: *const f64,
        incX: blas_int,
        beta: f64,
        y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_cgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const c_void,
        a: *const c_void,
        lda: blas_int,
        x: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const c_void,
        a: *const c_void,
        lda: blas_int,
        x: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_sger(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: f32,
        X: *const f32,
        incX: blas_int,
        Y: *const f32,
        incY: blas_int,
        A: *mut f32,
        lda: blas_int,
    );
    pub fn cblas_dger(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: f64,
        X: *const f64,
        incX: blas_int,
        Y: *const f64,
        incY: blas_int,
        A: *mut f64,
        lda: blas_int,
    );
    pub fn cblas_cgeru(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_cgerc(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_zgeru(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_zgerc(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_strsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_strmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtrmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
